--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ node_js:
   - "0.12"
   - "1"
   - "2"
+  - "3"
 
 notifications:
   email:
@@ -22,9 +23,9 @@ script:
 
 after_success:
   - npm install coveralls
-  - cat ./coverage/lcov.info | coveralls
+  - cat coverage/lcov.info | coveralls
+  - mv coverage/lcov.info .
 
 matrix:
-  fast_finish: true
   allow_failures:
     - node_js: "0.10"
