--- a/package.json
+++ b/package.json
@@ -10,16 +10,16 @@
     "test": "standard && node test.js"
   },
   "dependencies": {
-    "is-es6-generators": "~1.0.2",
-    "is-hybrid": "~1.0.0",
+    "is-es6-generators": "^1.0.2",
+    "is-hybrid": "^1.0.0",
     "is-node-stream": "^1.0.0",
-    "is-promise": "~2.1.0",
-    "is-typeof-error": "~1.0.0",
-    "kind-of": "~3.0.2"
+    "is-promise": "^2.1.0",
+    "is-typeof-error": "^1.0.0",
+    "kind-of": "^3.0.2"
   },
   "devDependencies": {
     "assertit": "^0.1.0",
-    "then-got": "^2.0.0",
+    "then-got": "^1.0.7",
     "then-parse-json": "^1.0.2",
     "through2": "^2.0.0"
   },
