--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "kind-of-extra",
   "version": "1.0.2",
-  "description": "Extends `kind-of` type check utility with support for promises, generators, streams and errors. Like `kindof(Promise.resolve(1)) === 'promise'` and etc.",
+  "description": "Additional functionality to `kind-of` type check utility, support promises, generators, streams, errors. Like that `kindOf(new Error('foo')) === 'error'`.",
   "repository": "tunnckoCore/kind-of-extra",
   "author": "Charlike Mike Reagent <@tunnckoCore> (http://www.tunnckocore.tk)",
+  "precommit.silent": true,
   "main": "index.js",
   "license": "MIT",
   "scripts": {
@@ -11,33 +12,46 @@
   },
   "dependencies": {
     "is-es6-generators": "^1.0.2",
-    "is-hybrid": "^1.0.0",
+    "is-hybrid": "^1.0.1",
     "is-node-stream": "^1.0.0",
     "is-promise": "^2.1.0",
-    "is-typeof-error": "^1.0.0",
+    "is-typeof-error": "^1.0.1",
     "kind-of": "^3.0.2"
   },
   "devDependencies": {
     "assertit": "^0.1.0",
-    "then-got": "^1.0.7",
-    "then-parse-json": "^1.0.2",
-    "through2": "^2.0.0"
+    "hybridify": "^1.0.9",
+    "pre-commit": "*",
+    "relike": "^1.0.3",
+    "through2": "^2.0.1"
   },
+  "files": [
+    "index.js"
+  ],
   "keywords": [
     "check",
-    "errors",
-    "extends",
+    "err",
+    "error",
     "extra",
+    "function",
+    "generator",
     "generators",
+    "get",
     "kind",
+    "kind-of-extra",
     "kindof",
-    "promises",
+    "normalize",
+    "of",
+    "promise",
+    "stream",
     "streams",
     "support",
     "type",
+    "typecheck",
     "typeof",
     "util",
     "utility",
-    "validate"
+    "validate",
+    "validation"
   ]
 }
