--- a/package.json
+++ b/package.json
@@ -1,29 +1,35 @@
 {
   "name": "kind-of-extra",
   "version": "1.0.3",
-  "description": "Additional functionality to `kind-of` type check utility, support promises, generators, streams, errors. Like that `kindOf(new Error('foo')) === 'error'`.",
+  "description": "Additional functionality to [kind-of][] type check utility. Support promises, generators, streams, errors.",
   "repository": "tunnckoCore/kind-of-extra",
   "author": "Charlike Mike Reagent <@tunnckoCore> (http://www.tunnckocore.tk)",
   "precommit.silent": true,
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "test": "standard && node test.js"
+    "lint": "standard --verbose",
+    "pretest": "npm run lint",
+    "test": "npm run coverage",
+    "posttest": "npm run lint:coverage",
+    "coverage": "nyc node test.js",
+    "lint:coverage": "nyc check-coverage --lines 0 --branches 0 --statements 0 --functions 0",
+    "report-coverage": "nyc report --reporter=text-lcov | coveralls",
+    "prerelease": "npm test",
+    "release": "standard-version --sign --no-verify",
+    "precommit": "git add --all",
+    "commit": "git-cz"
   },
-  "dependencies": {
-    "is-es6-generators": "^1.0.2",
-    "is-hybrid": "^1.0.1",
-    "is-node-stream": "^1.0.0",
-    "is-promise": "^2.1.0",
-    "is-typeof-error": "^1.0.1",
-    "kind-of": "^3.0.2"
-  },
+  "dependencies": {},
   "devDependencies": {
-    "assertit": "^0.1.0",
-    "hybridify": "^1.0.9",
-    "pre-commit": "*",
-    "relike": "^1.0.3",
-    "through2": "^2.0.1"
+    "commitizen": "^2.8.6",
+    "coveralls": "^2.11.14",
+    "cz-conventional-changelog": "^1.2.0",
+    "mukla": "^0.4.5",
+    "nyc": "^8.3.2",
+    "pre-commit": "^1.1.3",
+    "standard": "^8.5.0",
+    "standard-version": "^3.0.0"
   },
   "files": [
     "index.js"
@@ -53,5 +59,21 @@
     "utility",
     "validate",
     "validation"
-  ]
+  ],
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
+  },
+  "verb": {
+    "run": true,
+    "toc": true,
+    "layout": "empty",
+    "tasks": [
+      "readme"
+    ],
+    "lint": {
+      "reflinks": true
+    }
+  }
 }
