--- a/package.json
+++ b/package.json
@@ -20,7 +20,13 @@
     "precommit": "git add --all",
     "commit": "git-cz"
   },
-  "dependencies": {},
+  "dependencies": {
+    "is-es6-generators": "^1.0.2",
+    "is-node-stream": "^1.0.0",
+    "is-promise": "^2.1.0",
+    "kind-of": "^3.0.4",
+    "lazy-cache": "^2.0.1"
+  },
   "devDependencies": {
     "commitizen": "^2.8.6",
     "coveralls": "^2.11.14",
@@ -29,10 +35,12 @@
     "nyc": "^8.3.2",
     "pre-commit": "^1.1.3",
     "standard": "^8.5.0",
-    "standard-version": "^3.0.0"
+    "standard-version": "^3.0.0",
+    "through2": "^2.0.1"
   },
   "files": [
-    "index.js"
+    "index.js",
+    "utils.js"
   ],
   "keywords": [
     "check",
